--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,9 +18,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4.1.0
         with:
-          go-version: '1.20'
+          go-version: "1.20"
           # cache: true
           # cache-dependency-path: go.sum
+
       - name: Set up environment
         run: |
           echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
@@ -35,11 +36,12 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go
+
       - name: Docker Compose Action
         uses: isbang/compose-action@v1.5.1
         with:
           compose-file: "./deploy/dockercompose/docker-compose.yaml"
-        
+
       - name: Generate coverage report
         run: |
           go test -v -coverprofile=coverage.out ./...
@@ -48,7 +50,5 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.out
+          # file: ./coverage.out
           verbose: true
-        #run: |
-        #  bash <(curl -s https://codecov.io/bash)
